gst-libs/gst/codecparsers/gstmpegvideoparser.h
@@ -193,8 +193,8 @@ typedef struct _GstMpegVideoPacket          GstMpegVideoPacket;
  * @bitrate_value: Value of the bitrate as is in the stream (400bps unit)
  * @bitrate: the real bitrate of the Mpeg video stream in bits per second, 0 if VBR stream
  * @constrained_parameters_flag: %TRUE if this stream uses contrained parameters.
- * @intra_quantizer_matrix: intra-quantization table
- * @non_intra_quantizer_matrix: non-intra quantization table
+ * @intra_quantizer_matrix: intra-quantization table, in zigzag scan order
+ * @non_intra_quantizer_matrix: non-intra quantization table, in zigzag scan order
  *
  * The Mpeg2 Video Sequence Header structure.
  */
@@ -283,7 +283,9 @@ struct _GstMpegVideoSequenceDisplayExt
  * @load_chroma_non_intra_quantiser_matrix:
  * @chroma_non_intra_quantiser_matrix:
  *
- * The Quant Matrix Extension structure
+ * The Quant Matrix Extension structure that exposes quantization
+ * matrices in zigzag scan order. i.e. the original encoded scan
+ * order.
  */
 struct _GstMpegVideoQuantMatrixExt
 {
